fix: transfer items logic to archive do with 0 quantity, update shipmentitems when transferring item to new cust
